made a change to background color

--- a/themes/mig5_theme/colors.css
+++ b/themes/mig5_theme/colors.css
@@ -2,7 +2,7 @@
 
 /* Background */
 body {
-  background-color: #f8f8f8;
+  background-color: #ccc;
 }
 #header-menu .content > ul > li.active-trail {
   background-color: #f8f8f8;
